--- a/20250901_szkola.html
+++ b/20250901_szkola.html
@@ -64,14 +64,20 @@
         <div class="table-wrapper">
             <table border="1">
 <tr><th>Lp.</th><th>Nazwa</th></tr>
+<tr><td></td><td><a href="20251127_mastermind.html">Mastermind</a></td></tr>
+<tr><td></td><td><a href="20251126_historia.html">Historia</a></td></tr>
+<tr><td></td><td><a href="20251118_biologia.html">Biologia</a></td></tr>
 <tr><td></td><td><a href="20251110_haslo.html">Hasło</a></td></tr>
 <tr><td></td><td><a href="20251110_samochody.html">Samochody 2</a></td></tr>
 <tr><td></td><td><a href="20251106_komis.html">Samochody</a></td></tr>
+<tr><td></td><td><a href="20251101_historia.html">Historia</a></td></tr>
+<tr><td></td><td><a href="20251031_chemia.html">Chemia</a></td></tr>
 <tr><td></td><td><a href="20251015_kolo.html">Pole i Obwód Koła</a></td></tr>
 <tr><td></td><td><a href="20251008_snieznik.html">Śnieżnik</a></td></tr>
 <tr><td></td><td><a href="20251008_randint.html">Zgadnij Liczbę</a></td></tr>
 <tr><td></td><td><a href="20250924_oblicz2.html">Obliczenia 2</a></td></tr>
 <tr><td></td><td><a href="20250924_oblicz.html">Obliczenia</a></td></tr>
+<tr><td></td><td><a href="20250923_flagi.html">Trudne Flagi</a></td></tr>
 <tr><td></td><td><a href="20250922_zlotapilka.html">Złota Piłka</a></td></tr>
 <tr><td></td><td><a href="20250917_funkcje.html">Funkcje Tekstu</a></td></tr>
 <tr><td></td><td><a href="20250917_barca.html">Newcastle - Barcelona</a></td></tr>
@@ -79,6 +85,9 @@
 <tr><td></td><td><a href="20250910_szyfrcezara2.html">Szyfr Cezara 2</a></td></tr>
 <tr><td></td><td><a href="20250910_szyfrcezara.html">Szyfr Cezara</a></td></tr>
 <tr><td></td><td><a href="20250919_notatki.html">Notatki</a></td></tr>
+<tr><td></td><td><a href="20250908_pozytywizm.html">Pozytywizm</a></td></tr>
+<tr><td></td><td><a href="20250812_emotkiflagi.html">Flagi</a></td></tr>
+<tr><td></td><td><a href="20250625_szkola.html">2 Klasa</a></td></tr>
             </table>
         </div>
     </div>
