--- a/20250813_julka.html
+++ b/20250813_julka.html
@@ -28,11 +28,11 @@
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750326763/kolofortuny2_dmzd1w.png" alt="Koło Fortuny">
                 <span>Koło Fortuny</span>
             </a>
-            <a href="gry.html" class="app-icon">
+            <a href="20251130_gry.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750251558/gry_nxmlim.jpg" alt="Gry">
                 <span>Gry</span>
             </a>
-            <a href="aplikacje.html" class="app-icon">
+            <a href="20251130_aplikacje.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750251811/aplikacje2_uuvpgl.png" alt="Aplikacje">
                 <span>Aplikacje</span>
             </a>
