--- a/inne.html
+++ b/inne.html
@@ -12,6 +12,14 @@
     <div class="container">
         <h1>Inne Strony</h1>
         <div class="buttons">
+            <a href="20251130_gry.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750251558/gry_nxmlim.jpg" alt="Gry">
+                <span>Gry</span>
+            </a>
+            <a href="20251130_aplikacje.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750251811/aplikacje2_uuvpgl.png" alt="Aplikacje">
+                <span>Aplikacje</span>
+            </a>
             <a href="20251125_prawko.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1763498037/prawko_ndidvf.png" alt="Prawko">
                 <span>Prawko</span>
@@ -96,6 +104,10 @@
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1756998192/szkolaklasa3_skhhhs.png" alt="Szkoła 3">
                 <span>Szkoła 3</span>
             </a>
+            <a href="20250830_testy.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1756566447/testy_admuel.png" alt="Testy">
+                <span>Testy</span>
+            </a>
             <a href="20250827_pilka.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1756314196/football_wok6tv.png" alt="Piłka Nożna">
                 <span>Piłka Nożna</span>
@@ -135,6 +147,10 @@
             <a href="20250814_emotkizwierzeta.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1755159386/emotkizwierzeta_xlp30a.png" alt="Zwierzęta">
                 <span>Zwierzęta</span>
+            </a>
+            <a href="20250813_julka.html" class="app-icon">
+                <img src="20250813_julka.png" alt="Julka">
+                <span>Julka</span>
             </a>
             <a href="20250813_piesek.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1755108163/piesek_r1ucwg.png" alt="Piesek">
@@ -263,22 +279,6 @@
             <a href="20250617_kostka.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750327371/kostkadogry_xgh4is.png" alt="Kostka">
                 <span>Kostka</span>
-            </a>
-            <a href="gry.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750251558/gry_nxmlim.jpg" alt="Gry">
-                <span>Gry</span>
-            </a>
-            <a href="aplikacje.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750251811/aplikacje2_uuvpgl.png" alt="Aplikacje">
-                <span>Aplikacje</span>
-            </a>
-            <a href="julka.html" class="app-icon">
-                <img src="20250813_julka.png" alt="Julka">
-                <span>Julka</span>
-            </a>
-            <a href="testy.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1756566447/testy_admuel.png" alt="Testy">
-                <span>Testy</span>
             </a>
         </div>
     </div>
