--- a/index.html
+++ b/index.html
@@ -10,16 +10,8 @@
 </head>
 <body>
     <div class="container">
-<h1>Dawid</h1>
+    <h1>Dawid</h1>
         <div class="buttons">
-            <a href="gry.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750251558/gry_nxmlim.jpg" alt="Gry">
-                <span>Gry</span>
-            </a>
-            <a href="aplikacje.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750251811/aplikacje2_uuvpgl.png" alt="Aplikacje">
-                <span>Aplikacje</span>
-            </a>
             <a href="20250809_goldrun.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1754815264/goldrun_fayrn5.png" alt="Gold Run">
                 <span>Gold Run</span>
@@ -43,6 +35,22 @@
             <a href="20250618_kolkoikrzyzyk.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750324262/kolkoikrzyz2_nmidv4.png" alt="Kółko i Krzyżyk">
                 <span>Kółko i Krzyżyk</span>
+            </a>
+            <a href="20250620_zbieraniejablek.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750450328/logozbieraniajablek_kndluj.png" alt="Zbieranie Jabłek">
+                <span>Zbieranie Jabłek</span>
+            </a>
+            <a href="20250619_tempobiegu.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750251231/tempobiegu_vb1sow.jpg" alt="Tempo Biegu">
+                <span>Tempo</span>
+            </a>
+            <a href="20250617_kolofortuny.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750326763/kolofortuny2_dmzd1w.png" alt="Koło Fortuny">
+                <span>Koło Fortuny</span>
+            </a>
+            <a href="20250617_kostka.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750327371/kostkadogry_xgh4is.png" alt="Kostka">
+                <span>Kostka</span>
             </a>
         </div>
     </div>
