--- a/20250831_dawid.html
+++ b/20250831_dawid.html
@@ -12,13 +12,65 @@
     <div class="container">
 <h1>Dawid</h1>
         <div class="buttons">
-            <a href="testy.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1756566447/testy_admuel.png" alt="Testy">
-                <span>Testy</span>
-            </a>
             <a href="20250901_szkola.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1756998192/szkolaklasa3_skhhhs.png" alt="Szkoła 3">
                 <span>Szkoła 3</span>
+            </a>
+            <a href="20250923_flagi.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1758639345/trudneflagi_zu1poc.png" alt="Trudne Flagi">
+                <span>Trudne Flagi</span>
+            </a>
+            <a href="20251118_prawko.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1763498037/prawko_ndidvf.png" alt="Prawko">
+                <span>Prawko</span>
+            </a>
+            <a href="20251125_prawko.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1763498037/prawko_ndidvf.png" alt="Prawko">
+                <span>Prawko</span>
+            </a>
+            <a href="20250809_goldrun.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1754815264/goldrun_fayrn5.png" alt="Gold Run">
+                <span>Gold Run</span>
+            </a>
+            <a href="20250809_ufo.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1754815441/ufo_utvgyg.png" alt="Ufo">
+                <span>Ufo</span>
+            </a>
+            <a href="20250811_wedkarstwo.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1754934579/wedkarstwo_yyyxnx.png" alt="Wędkarstwo">
+                <span>Wędkarstwo</span>
+            </a>
+            <a href="20250812_emotkiflagi.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1754993042/emotkiflagi_n4wrxw.png" alt="Flagi">
+                <span>Flagi</span>
+            </a>
+            <a href="20250617_kosmicznykwadrat.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750324741/kosmicznykwadrat_ltr6kr.jpg" alt="Kosmiczny Kwadrat">
+                <span>Kosmiczny Kwadrat</span>
+            </a>
+            <a href="20250618_kolkoikrzyzyk.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750324262/kolkoikrzyz2_nmidv4.png" alt="Kółko i Krzyżyk">
+                <span>Kółko i Krzyżyk</span>
+            </a>
+            <a href="20250620_zbieraniejablek.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750450328/logozbieraniajablek_kndluj.png" alt="Zbieranie Jabłek">
+                <span>Zbieranie Jabłek</span>
+            </a>
+            <a href="20250619_tempobiegu.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750251231/tempobiegu_vb1sow.jpg" alt="Tempo Biegu">
+                <span>Tempo</span>
+            </a>
+            <a href="20250617_kolofortuny.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750326763/kolofortuny2_dmzd1w.png" alt="Koło Fortuny">
+                <span>Koło Fortuny</span>
+            </a>
+            <a href="20250617_kostka.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750327371/kostkadogry_xgh4is.png" alt="Kostka">
+                <span>Kostka</span>
+            </a>
+            <a href="20250830_testy.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1756566447/testy_admuel.png" alt="Testy">
+                <span>Testy</span>
             </a>
             <a href="20251123_verbs.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1758823572/verbs_nkbuey.png" alt="Verbs">
@@ -32,15 +84,11 @@
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1758824207/vocabulary_pbrxms.png" alt="Vocabulary">
                 <span>Vocabulary</span>
             </a>
-            <a href="20251118_prawko.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1763498037/prawko_ndidvf.png" alt="Prawko">
-                <span>Prawko</span>
+            <a href="20250912_mediumemotik.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1755866451/emotki_lb8pvb.png" alt="Emotki">
+                <span>Emotki</span>
             </a>
-            <a href="20250923_flagi.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1758639345/trudneflagi_zu1poc.png" alt="Trudne Flagi">
-                <span>Trudne Flagi</span>
-            </a>
-            <a href="inne.html" class="app-icon">
+            <a href="20251130_inne.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750881328/inne_cqv03n.png" alt="Inne">
                 <span>Inne</span>
             </a>
