--- a/20251130_angielski.html
+++ b/20251130_angielski.html
@@ -93,7 +93,7 @@
         {q: 'next week', a: 'the next week'},
         {q: 'this', a: 'that'},
         {q: 'these', a: 'those'},
-        {q: 'here', a: 'three'},
+        {q: 'here', a: 'there'},
         {q: 'zaproponować', a: 'offer'},
         {q: 'kazać', a: 'order'},
         {q: 'obiecać', a: 'promise'},
