--- a/20251130_niemiecki.html
+++ b/20251130_niemiecki.html
@@ -65,9 +65,14 @@
 <div id="card">
     <h2 id="verb"></h2>
 
-    <input id="du" placeholder="du – forma rozkazująca">
-    <input id="ihr" placeholder="ihr – forma rozkazująca">
-    <input id="sie" placeholder="Sie – forma rozkazująca">
+    <input id="du" placeholder="du – forma rozkazująca"
+           autocapitalize="off" autocorrect="off" spellcheck="false" autocomplete="off">
+
+    <input id="ihr" placeholder="ihr – forma rozkazująca"
+           autocapitalize="off" autocorrect="off" spellcheck="false" autocomplete="off">
+
+    <input id="sie" placeholder="Sie – forma rozkazująca"
+           autocapitalize="off" autocorrect="off" spellcheck="false" autocomplete="off">
 
     <button onclick="checkAnswer()">Sprawdź</button>
 
@@ -83,9 +88,9 @@ const tasks = [
     {inf:"zurückkommen – wracać", du:"komm zurück", ihr:"kommt zurück", sie:"kommen Sie zurück"},
     {inf:"fahren – jechać", du:"fahr", ihr:"fahrt", sie:"fahren Sie"},
     {inf:"sein – być", du:"sei", ihr:"seid", sie:"seien Sie"},
-    {inf:"etwas fotografieren – fotografować", du:"fotografier etwas", ihr:"fotografiert etwas", sie:"fotografieren Sie etwas"},
+    {inf:"etwas fotografieren – fotografować", du:"fotografier etwas", ihr:"fotografiert coś", sie:"fotografieren Sie coś"},
     {inf:"ein Buch lesen – czytać książkę", du:"lies ein Buch", ihr:"lest ein Buch", sie:"lesen Sie ein Buch"},
-    {inf:"sich für Mode interessieren – interesować się modą", du:"interessiere dich für Mode", ihr:"interessiert euch für Mode", sie:"interessieren Sie sich für Mode"},
+    {inf:"sich für Mode interessieren – interesować się modą", du:"interessiere dich für Mode", ihr:"interessiert euch für Mode", sie:"interessieren Sie się für Mode"},
     {inf:"nicht so viel fernsehen – nie oglądać dużo TV", du:"sieh nicht so viel fern", ihr:"seht nicht so viel fern", sie:"sehen Sie nicht so viel fern"},
     {inf:"aufräumen – sprzątać", du:"räum auf", ihr:"räumt auf", sie:"räumen Sie auf"},
     {inf:"kaufen – kupować", du:"kauf", ihr:"kauft", sie:"kaufen Sie"},
@@ -97,10 +102,10 @@ const tasks = [
     {inf:"nehmen – brać", du:"nimm", ihr:"nehmt", sie:"nehmen Sie"},
     {inf:"essen – jeść", du:"iss", ihr:"esst", sie:"essen Sie"},
     {inf:"waschen – myć", du:"wasch", ihr:"wascht", sie:"waschen Sie"},
-    {inf:"einladen – zapraszać", du:"lad ein", ihr:"ladet ein", sie:"laden Sie ein"},
+    {inf:"einladen – zapraszać", du:"lad ein", ihr:"ladet ein", sie:"laden Sie ein"}
 ];
 
-// kopia do losowania
+// Kopia listy
 let remaining = [...tasks];
 let current;
 
@@ -118,9 +123,11 @@ function nextTask() {
     remaining.splice(index, 1);
 
     document.getElementById("verb").textContent = current.inf;
+
     document.getElementById("du").value = "";
     document.getElementById("ihr").value = "";
     document.getElementById("sie").value = "";
+
     document.getElementById("correctAnswers").textContent = "";
 }
 
