--- a/20251130_niemiecki.html
+++ b/20251130_niemiecki.html
@@ -88,7 +88,7 @@ const tasks = [
     {inf:"zurückkommen – wracać", du:"komm zurück", ihr:"kommt zurück", sie:"kommen Sie zurück"},
     {inf:"fahren – jechać", du:"fahr", ihr:"fahrt", sie:"fahren Sie"},
     {inf:"sein – być", du:"sei", ihr:"seid", sie:"seien Sie"},
-    {inf:"etwas fotografieren – fotografować", du:"fotografier etwas", ihr:"fotografiert coś", sie:"fotografieren Sie coś"},
+    {inf:"etwas fotografieren – fotografować", du:"fotografier etwas", ihr:"fotografiert etwas", sie:"fotografieren Sie etwas"},
     {inf:"ein Buch lesen – czytać książkę", du:"lies ein Buch", ihr:"lest ein Buch", sie:"lesen Sie ein Buch"},
     {inf:"sich für Mode interessieren – interesować się modą", du:"interessiere dich für Mode", ihr:"interessiert euch für Mode", sie:"interessieren Sie się für Mode"},
     {inf:"nicht so viel fernsehen – nie oglądać dużo TV", du:"sieh nicht so viel fern", ihr:"seht nicht so viel fern", sie:"sehen Sie nicht so viel fern"},
