--- a/20251130_niemiecki.html
+++ b/20251130_niemiecki.html
@@ -90,7 +90,7 @@ const tasks = [
     {inf:"sein – być", du:"sei", ihr:"seid", sie:"seien Sie"},
     {inf:"etwas fotografieren – fotografować", du:"fotografier etwas", ihr:"fotografiert etwas", sie:"fotografieren Sie etwas"},
     {inf:"ein Buch lesen – czytać książkę", du:"lies ein Buch", ihr:"lest ein Buch", sie:"lesen Sie ein Buch"},
-    {inf:"sich für Mode interessieren – interesować się modą", du:"interessiere dich für Mode", ihr:"interessiert euch für Mode", sie:"interessieren Sie się für Mode"},
+    {inf:"sich für Mode interessieren – interesować się modą", du:"interessiere dich für Mode", ihr:"interessiert euch für Mode", sie:"interessieren Sie sich für Mode"},
     {inf:"nicht so viel fernsehen – nie oglądać dużo TV", du:"sieh nicht so viel fern", ihr:"seht nicht so viel fern", sie:"sehen Sie nicht so viel fern"},
     {inf:"aufräumen – sprzątać", du:"räum auf", ihr:"räumt auf", sie:"räumen Sie auf"},
     {inf:"kaufen – kupować", du:"kauf", ihr:"kauft", sie:"kaufen Sie"},
