--- a/20250901_szkola.html
+++ b/20250901_szkola.html
@@ -64,6 +64,7 @@
         <div class="table-wrapper">
             <table border="1">
 <tr><th>Lp.</th><th>Nazwa</th></tr>
+<tr><td></td><td><a href="20251202_geografia.html">Geografia</a></td></tr>
 <tr><td></td><td><a href="20251127_mastermind.html">Mastermind</a></td></tr>
 <tr><td></td><td><a href="20251126_historia.html">Historia</a></td></tr>
 <tr><td></td><td><a href="20251118_biologia.html">Biologia</a></td></tr>
