--- a/20250901_szkola.html
+++ b/20250901_szkola.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>dawi_108</title>
+    <title>Szkoła</title>
     <link rel="icon" href="dawi108.png" type="image/png">
     <link rel="manifest" href="20251203_manifest.json">
     <link rel="stylesheet" href="style.css">
@@ -69,6 +69,7 @@
         <div class="table-wrapper">
             <table border="1">
 <tr><th>Lp.</th><th>Nazwa</th></tr>
+<tr><td></td><td><a href="20251203_egzamin.html">Egzamin</a></td></tr>
 <tr><td></td><td><a href="20251202_geografia.html">Geografia</a></td></tr>
 <tr><td></td><td><a href="20251130_niemiecki.html">Język Niemiecki</a></td></tr>
 <tr><td></td><td><a href="20251130_angielski.html">Język Angielski</a></td></tr>
