--- a/20250901_szkola.html
+++ b/20250901_szkola.html
@@ -57,18 +57,18 @@
 <tr><td></td><td><a href="20250902_zdarzenia.html">Zdarzenia</a></td></tr>
             </table> 
         </div>
-        <h2>Bazy Danych</h2>
-        <div class="table-wrapper">
-            <table border="1">
-<tr><th>Lp.</th><th>Nazwa</th></tr>
-<tr><td></td><td><a href="20251106_baza.html">Fryzjerstwo</a></td></tr>
-<tr><td></td><td><a href="20251028_baza.html">Obrazki</a></td></tr>
-            </table>
-        </div>
         <h2>Inne</h2>
         <div class="table-wrapper">
             <table border="1">
 <tr><th>Lp.</th><th>Nazwa</th></tr>
+<tr><td></td><td><a href="20251207_pozytywizm.html">Pozytywizm</a></td></tr>
+<tr><td></td><td><a href="20251207_zbrodnia.html">Zbrodnia i Kara</a></td></tr>
+<tr><td></td><td><a href="20251207_gloria.html">Gloria Victis</a></td></tr>
+<tr><td></td><td><a href="20251207_potop.html">Potop</a></td></tr>
+<tr><td></td><td><a href="20251207_lalka.html">Lalka</a></td></tr>
+<tr><td></td><td><a href="20251207_mendel.html">Mendel Gdański</a></td></tr>
+<tr><td></td><td><a href="20251207_pojęcia.html">Pojęcia</a></td></tr>
+<tr><td></td><td><a href="20251204_zapytania.html">Zapytania</a></td></tr>
 <tr><td></td><td><a href="20251203_egzamin.html">Egzamin</a></td></tr>
 <tr><td></td><td><a href="20251202_geografia.html">Geografia</a></td></tr>
 <tr><td></td><td><a href="20251130_niemiecki.html">Język Niemiecki</a></td></tr>
@@ -79,8 +79,10 @@
 <tr><td></td><td><a href="20251110_haslo.html">Hasło</a></td></tr>
 <tr><td></td><td><a href="20251110_samochody.html">Samochody 2</a></td></tr>
 <tr><td></td><td><a href="20251106_komis.html">Samochody</a></td></tr>
+<tr><td></td><td><a href="20251106_baza.html">Kadra</a></td></tr>
 <tr><td></td><td><a href="20251101_historia.html">Historia</a></td></tr>
 <tr><td></td><td><a href="20251031_chemia.html">Chemia</a></td></tr>
+<tr><td></td><td><a href="20251028_baza.html">Pracownicy</a></td></tr>
 <tr><td></td><td><a href="20251015_kolo.html">Pole i Obwód Koła</a></td></tr>
 <tr><td></td><td><a href="20251009_galeria3.html">Galeria 3</a></td></tr>
 <tr><td></td><td><a href="20251009_galeria2.html">Galeria 2</a></td></tr>
