--- a/20250901_szkola.html
+++ b/20250901_szkola.html
@@ -67,7 +67,7 @@
 <tr><td></td><td><a href="20251207_potop.html">Potop</a></td></tr>
 <tr><td></td><td><a href="20251207_lalka.html">Lalka</a></td></tr>
 <tr><td></td><td><a href="20251207_mendel.html">Mendel Gdański</a></td></tr>
-<tr><td></td><td><a href="20251207_pojęcia.html">Pojęcia</a></td></tr>
+<tr><td></td><td><a href="20251207_pojecia.html">Pojęcia</a></td></tr>
 <tr><td></td><td><a href="20251204_zapytania.html">Zapytania</a></td></tr>
 <tr><td></td><td><a href="20251203_egzamin.html">Egzamin</a></td></tr>
 <tr><td></td><td><a href="20251202_geografia.html">Geografia</a></td></tr>
