--- a/20251207_lalka.html
+++ b/20251207_lalka.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Lalka</title>
+<title>Lalka - Bolesław Prus</title>
 <style>
 body{
 background:#0d102b;
