--- a/20251207_mendel.html
+++ b/20251207_mendel.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Mendel Gdański</title>
+<title>Mendel Gdański - Maria Konopnicka</title>
 <style>
 body{
 background:#0d102b;
