--- a/20251202_geografia.html
+++ b/20251202_geografia.html
@@ -109,6 +109,7 @@ const questions = [
 ];
 
 // ===================== ZMIENNE =======================
+let dawid108 = localStorage.getItem("dawid108") || 0;
 let lives, currentIndex, shuffled, correctCount;
 const questionEl = document.getElementById("question");
 const answersEl = document.getElementById("answers");
@@ -166,6 +167,9 @@ function checkAnswer(selected, correctIndex) {
     const q = shuffled[currentIndex];
     if (selected === correctIndex) {
         currentIndex++;
+        dawid108++;
+        localStorage.setItem("dawid108", dawid108);
+        console.log("dawid108:", dawid108);
         showQuestion();
     } else {
         lives--;
@@ -178,6 +182,9 @@ function checkAnswer(selected, correctIndex) {
         } else {
             setTimeout(() => {
                 currentIndex++;
+                dawid108++;
+                localStorage.setItem("dawid108", dawid108);
+                console.log("dawid108:", dawid108);
                 showQuestion();
             }, 3000);
         }
