--- a/20250901_szkola.html
+++ b/20250901_szkola.html
@@ -62,6 +62,7 @@
             <table border="1">
 <tr><th>Lp.</th><th>Nazwa</th></tr>
 <tr><td></td><td><a href="20251207_pozytywizm.html">Pozytywizm</a></td></tr>
+<tr><td></td><td><a href="20251208_rodion.html">Rodion Raskolnikow</a></td></tr>
 <tr><td></td><td><a href="20251207_zbrodnia.html">Zbrodnia i Kara</a></td></tr>
 <tr><td></td><td><a href="20251207_gloria.html">Gloria Victis</a></td></tr>
 <tr><td></td><td><a href="20251207_potop.html">Potop</a></td></tr>
