--- a/20250812_emotkiflagi.html
+++ b/20250812_emotkiflagi.html
@@ -409,6 +409,7 @@
     const RECORD_KEY = 'flaga_emotka_best';
 
     // Game state
+    let dawid108 = localStorage.getItem("dawid108") || 0;
     let timeLeft = 60;
     let score = 0;
     let timerInterval = null;
@@ -529,6 +530,9 @@
         .filter(Boolean).map(normalizeAnswer);
       if(accepted.includes(answer)){
         score += 1;
+        dawid108++;
+        localStorage.setItem("dawid108", dawid108);
+        console.log("dawid108:", dawid108);
         const bonus = (roundCount === 1) ? 4 : 1;
         timeLeft += bonus;
         updateHUD();
