--- a/20250815_usmieszki.html
+++ b/20250815_usmieszki.html
@@ -367,6 +367,7 @@
     const RECORD_KEY = 'usmieszki_emotki_best';
 
     // Game state
+    let dawid108 = localStorage.getItem("dawid108") || 0;
     let timeLeft = 60;
     let score = 0;
     let timerInterval = null;
@@ -487,6 +488,9 @@
         .filter(Boolean).map(normalizeAnswer);
       if(accepted.includes(answer)){
         score += 1;
+        dawid108++;
+        localStorage.setItem("dawid108", dawid108);
+        console.log("dawid108:", dawid108);
         const bonus = (roundCount === 1) ? 5 : 1;
         timeLeft += bonus;
         updateHUD();
