--- a/20251207_pozytywizm.html
+++ b/20251207_pozytywizm.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Test Pozytywizm</title>
+<link rel=icon" href="dawi108.png">
 <style>
 body{
 background:#0d102b;
