--- a/20251207_nowy.html
+++ b/20251207_nowy.html
@@ -131,7 +131,7 @@ let questions = [
 
 {cat:"Zbrodnia i Kara", q:"Bohaterowie ze Zbrodni i Kary to?", a:"Sonia Marmieładow, Dymitr Razumichin", b:"Izabela Łęcka, Tomasz Łęcki", c:"Rafał Olbromski, Andrzej Radek", d:"Barbara Niechcicowa, Bogumił Niechcic"},
 
-{cat:"Mendel Gdański", q:"Bohaterowie z Mendla Gdańskiego to?", a:"Jakub, student pomagający Mendlowi", b:"Wokulski, kupiec z Warszawy", c:"Marta, córka Smugi", d:"Rafał, malarz z Krakowa"},
+{cat:"Mendel Gdański", q:"Bohaterowie z Mendla Gdańskiego to?", a:"Jakub, Mendel", b:"Wokulski, kupiec z Warszawy", c:"Marta, córka Smugi", d:"Rafał, malarz z Krakowa"},
 
 {cat:"Potop", q:"Bohaterowie z Potopu to?", a:"Oleńka Billewiczówna, Michał Wołodyjowski", b:"Izabela Łęcka, Florentyna", c:"Anielka Bohatyrowicz, Justyna Orzelska", d:"Maryla, Tadeusz Soplica"},
 
