--- a/20250901_szkola.html
+++ b/20250901_szkola.html
@@ -61,6 +61,7 @@
         <div class="table-wrapper">
             <table border="1">
 <tr><th>Lp.</th><th>Nazwa</th></tr>
+<tr><td></td><td><a href="20251210_historia.html">Historia</a></td></tr>
 <tr><td></td><td><a href="20251207_pozytywizm.html">Pozytywizm</a></td></tr>
 <tr><td></td><td><a href="20251208_rodion.html">Rodion Raskolnikow</a></td></tr>
 <tr><td></td><td><a href="20251207_zbrodnia.html">Zbrodnia i Kara</a></td></tr>
