--- a/20250815_emotkisolo.html
+++ b/20250815_emotkisolo.html
@@ -16,7 +16,7 @@
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1754993042/emotkiflagi_n4wrxw.png" alt="Flagi">
                 <span>Flagi</span>
             </a>
-            <a href="mediumemotik.html" class="app-icon">
+            <a href="20250912_mediumemotik.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1755866451/emotki_lb8pvb.png" alt="Emotki">
                 <span>Emotki</span>
             </a>
