--- a/20250901_szkola.html
+++ b/20250901_szkola.html
@@ -12,6 +12,8 @@
     <meta name="apple-mobile-web-app-title" content="Szkoła">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <link rel="apple-touch-icon" href="dawi108.png">
+
+    <script src="script.js"></script>
 </head>
 <body>
     <div class="container">
