--- a/20251208_rodion.html
+++ b/20251208_rodion.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Rodion Raskolnikow</title>
 <script src="script.js"></script>
+<link rel="icon" href="dawi108.png" type="image/png">
 <style>
 body{
 background:#0d102b;
