--- a/20251207_pozytywizm.html
+++ b/20251207_pozytywizm.html
@@ -4,7 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Test Pozytywizm</title>
-<link rel=icon" href="dawi108.png">
+<script src="script.js"></script>
+<link rel="icon" href="dawi108.png" type="image/png">
 <style>
 body{
 background:#0d102b;
