--- a/20251207_potop.html
+++ b/20251207_potop.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Potop - Henryk Sienkiewicz</title>
+<script src="script.js"></script>
+<link rel="icon" href="dawi108.png" type="image/png">
 <style>
 body{
 background:#0d102b;
