--- a/20251204_zapytania.html
+++ b/20251204_zapytania.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nauka SQL</title>
+    <script src="script.js"></script>
+    <link rel="icon" href="dawi108.png" type="image/png">
     <style>
         body { font-family: Arial, sans-serif; margin:0; padding:0; background:#f2f2f2; }
         header { display:flex; gap:10px; justify-content:center; padding:15px; background:white; position:sticky; top:0; }
