--- a/20251203_egzamin.html
+++ b/20251203_egzamin.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Na Egzamin</title>
     <link rel="icon" href="dawi108.png">
+    <script src="script.js"></script>
+    <link rel="icon" href="dawi108.png" type="image/png">
     <style>
         main{
             width: 100%;
