--- a/20251202_listy.html
+++ b/20251202_listy.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="wclassth=device-wclassth, initial-scale=1.0">
     <title>Listy 1</title>
+    <script src="script.js"></script>
+    <link rel="icon" href="dawi108.png" type="image/png">
     <style>
         /*ol {
             list-style-type: upper-roman;
