--- a/20251130_niemiecki.html
+++ b/20251130_niemiecki.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>Imperativ – Trening</title>
+<script src="script.js"></script>
+<link rel="icon" href="dawi108.png" type="image/png">
 <style>
     body {
         font-family: Arial, sans-serif;
