--- a/20251130_angielski.html
+++ b/20251130_angielski.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Mowa zależna — gra</title>
+  <script src="script.js"></script>
+  <link rel="icon" href="dawi108.png" type="image/png">
   <style>
     :root{ --bg:#0f1724; --card:#0b1220; --accent:#60a5fa; --ok:#10b981; --bad:#ef4444; color-scheme: dark; }
     *{box-sizing:border-box}
