--- a/20251126_historia.html
+++ b/20251126_historia.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Test z Historii</title>
+<script src="script.js"></script>
+<link rel="icon" href="dawi108.png" type="image/png">
 <style>
     body {
         background: linear-gradient(135deg, #1e3c72, #2a5298);
