--- a/20251125_tabelkaspr.html
+++ b/20251125_tabelkaspr.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabelka Sprawdzian</title>
-    <link rel="icon" href="dawi108.png">
+    <link rel="icon" href="dawi108.png" type="image/png">
+    <script src="script.js"></script>
     <style>
         body{
             background-color: gray;
