--- a/20251125_tabelka4.html
+++ b/20251125_tabelka4.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabelka 4</title>
+    <link rel="icon" href="dawi108.png" type="image/png">
+    <script src="script.js"></script>
     <style>
         body{
             font-family: "Segoe UI", sans-serif;
