--- a/20251125_prawko.html
+++ b/20251125_prawko.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>Test na Prawo Jazdy – ABC</title>
+<link rel="icon" href="dawi108.png" type="image/png">
+<script src="script.js"></script>
 
 <style>
     body {
@@ -835,6 +837,7 @@ let index = 0;
 let lives = 9;
 let points = 0;
 let answering = true;
+let dawid108 = localStorage.getItem("dawid108") || 0;
 
 const imgEl = document.getElementById("image");
 const qEl = document.getElementById("question");
@@ -894,6 +897,9 @@ function checkAnswer(choiceIndex) {
 
     if (choiceIndex === correct) {
         points++;
+        dawid108++;
+        localStorage.setItem("dawid108", dawid108);
+        console.log("dawid108:", dawid108);
         pointsEl.textContent = points;
         buttons[choiceIndex].classList.add("correct");
         setTimeout(nextQuestion, 800);
