--- a/20251123_rejestracja.html
+++ b/20251123_rejestracja.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rejestracja</title>
     <link rel="stylesheet" href="20251123_styl.css">
-    <link rel="icon" href="dawi108.png">
+    <link rel="icon" href="dawi108.png" type="image/png">
+    <script src="script.js"></script>
 </head>
 <body>
     <header>
